# auto_docker_compose

./: .gitignore  Cargo.toml  Cross.toml
src/: lib.rs  main.rs  utils.rs
