[package]
name = "auto_docker_compose"
version = "0.1.0"
author = ["lizqwerscott <lizqwerscott@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
structopt = "0.3.26"

[[bin]]
  name = "adcompose"
  path = "./src/main.rs"
